--- a/src/shared/Navigation/Navigation.module.css
+++ b/src/shared/Navigation/Navigation.module.css
@@ -27,3 +27,33 @@
 .site-title {
   font-size: 2em;
 }
+
+@media (max-width: 576px) {
+  .site-title {
+    font-size: 1.25em;
+  }
+  .link-container {
+    /* padding: 0;
+  margin: 0;
+  display: flex; */
+    gap: 8px;
+  }
+  .nav a {
+    /* color: inherit;
+  text-decoration: none;
+  height: 100%;
+  display: flex;
+  align-items: center; */
+    padding: 2px;
+  }
+  .nav {
+    /* background-color: rgb(67, 60, 60);
+  color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: stretch; */
+    line-height: 40px;
+    gap: 16px;
+    padding: 0 8px;
+  }
+}
